# postcaptain

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  next-step.md  package.json  pyproject.toml  redaction.toml.example  tsconfig.json  work-mentor-design.md
scripts/: seed-synthetic.ts
src/: characterizer.ts  cli.ts  dashboard.ts  detectors.ts  events.ts  explore.ts  kb.ts  llm.ts  query.ts  recap.ts  redact.ts  sessionizer.ts  store.ts  synthesis.ts  themes.ts  usage.ts
src/collectors/: activitywatch.ts  calendar.ts  copilot.ts  github.ts
src/postcaptain/: __init__.py  cli.py  events.py  store.py
src/postcaptain/collectors/: __init__.py  copilot.py
tests/: activitywatch.test.ts  calendar.test.ts  characterizer.test.ts  copilot.test.ts  dashboard.test.ts  detectors.test.ts  events.test.ts  explore.test.ts  github.test.ts  kb.test.ts  query.test.ts  recap.test.ts  redact.test.ts  sessionizer.test.ts  store.test.ts  synthesis.test.ts  test_copilot.py  test_events.py  test_store.py  themes.test.ts  usage.test.ts
