[project]
name = "postcaptain"
version = "0.0.1"
description = "Local-first AI work mentor — passive capture + a disciplined insight layer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mårten Frisk" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
postcaptain = "postcaptain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postcaptain"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
